css/mainwp.css
/* ... */
#mainwp-tabs .nav-tab {
    -moz-border-radius-topleft: 7px;
    -webkit-border-top-left-radius: 7px;
     border-top-left-radius: 7px;
    -moz-border-radius-topright: 7px;
    -webkit-border-top-right-radius: 7px;
    border-top-right-radius: 7px;
}

#selected_sites {
    background: #ffffff ;
}

.mainwp-search-form h3 {
    margin-top: 0 !important ;
    font-size: 16px ;
    border-bottom: 0px ridge #bbb;
}

#selected_groups, .selected_groups {
    background: #fff ;
}

#mainwplogo
{
    float:right;
    position: relative ;
    margin-bottom: .3em ;
}

/* Enhance Wordpress Admin UI */
#adminmenuback, #adminmenuwrap, #adminmenu, #adminmenu .wp-submenu, #adminmenu .wp-submenu-wrap, .folded #adminmenu .wp-has-current-submenu .wp-submenu {
    width: 160px;
} /* fixed by bogdan, original 180px, changed to auto */

/*
.mainwp_boxout {
    padding: 10px 7px 10px 7px;
    left: 30px;
    width: 130px;
    position: absolute;
    background: rgba(255, 255, 255, .9 );
    border: 1px solid #7fb100 !important;
    margin: 0 !important;
    z-index: 9999;
    font-family: Arial;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px ;
    box-shadow: 2px 3px 6px rgba(0,0,0,0.4);
    -webkit-box-shadow: 2px 3px 6px rgba(0,0,0,0.4);
    -moz-box-shadow: 2px 3px 6px rgba(0,0,0,0.4);
}

.mainwp_boxout a {
    display: block;
    font-family: Arial;
    font-size: 13px;
    color: black !important;
    text-decoration: none;
    line-height: 1.2em;
    padding: 4px 5px 4px 7px !important;
}

.mainwp_boxout a:hover {
    background-color: none;
    color: #7fb100 !important ;
}

.mainwp_boxoutin {
    background-image: url('../images/pointer.png');
    background-position: left ;
    display: block;
    height: 30px;
    margin: -4px 0 0 -27px;
    position: absolute;
    width: 20px;
}
*/

#toplevel_page_mainwp_tab a:hover {color: #7fb100 !important;}
#toplevel_page_mainwp_tab .hoverli {background-color: #333 !important; }
#toplevel_page_mainwp_tab li.hoverli {
    box-shadow: none!important ;
    -moz-box-shadow: none!important ;
    -webkit-box-shadow: none!important ;
    background-image: url('../images/pointer.png');
    background-position: right ;
    background-repeat: no-repeat;
    background-size: 12px ;
}

#toplevel_page_mainwp_tab li.hoverli a span { color: #7fb100 !important; }

.mainwp_boxout {
    background: #444;
    z-index: 9999;
    margin-left: 1em;
    padding: 10px 7px 10px 7px;
    left: 17px;
    width: 160px;
    position: absolute;
}

.mainwp_boxout a {
    color: #ccc;
    text-decoration: none;
    display: block;
    line-height: 1.2em;
    padding: 6px 12px;
}

.mainwp_boxout a:hover {
    color: #7fb100;
}



#mainwp-documentation-box {
    width: 100% ;
}
.mainwp-links-box {
    min-height: 300px ;
    height: auto ;
    width: 30% ;
    margin-top: 1em ;
    margin-right: 1% ;
    padding: 10px ;
    background: #f9f9f9 ;
    border: 1px solid #7fb100;
    border-radius: 10px;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    float: left ;
}

.mainwp_managesites_import_listing, .import_user_import_listing {
    margin: 10px 0;
    overflow-y: scroll;
    height: 250px;
}

.mainwp-search-box {
    margin: 0 0 20px 0;
    padding: 0 0 20px 0;
    width: 380px;
    border-bottom: 1px solid #ddd;
}

.mainwp-search-box input[type=text]{
    width: 210px;
}

#mainwp_search_sites {
    width: 210px;
}

.mainwp-update-password-form {
    float: right;
    width: 256px;
    margin-right: 0px;
    clear: both ;
}

.mainwp-update-password-form h3 {
    border-bottom: 0 ridge #BBBBBB;
    font-size: 16px;
    margin-top: 0 !important;
}

.mainwp-update-password-form .form-field input {
    width: 210px;
}

/* Plugins and Themes Table Striping */
#mainwp-table-overflow tr:nth-child(even) { background-color: #d5e4af !important ;}
#mainwp-table-overflow tr:hover {background: #b4c194 !important ; }


.backup_destination_cont.settings .backup_destination_title:hover,.backup_destination_cont.settings .backup_destination_type:hover
{
    cursor: hand; cursor: pointer;
}
.backup_destination_type
{
    background-size: 25px;
    background-repeat: no-repeat;
    background-position: 5px 5px;
    float:left;
    display: inline-block;
    width: 120px;
    padding: 10px 10px 10px 40px;
}
.backup_destination_title
{
    float:left;
    display: inline-block;
    width: 300px;
    padding: 10px;
}
.backup_destination_settings,.backup_destination_excludecont
{
    display: inline-block;
    width: 40px;
    padding-top: 8px;
    padding-bottom: 5px;
    cursor: hand; cursor: pointer;
}
.backup_destination_settings img,.backup_destination_excludecont img
{
    cursor: hand; cursor: pointer;
}
.backup_destination_cont
{
    border: 1px solid #d6d6d6;
    margin-bottom: 10px;
    min-height: 40px;
}
.backup_icon
{
    background-size: 25px;
    background-repeat: no-repeat;
    background-position: 5px 5px;
    padding: 10px;
}

.backup_destination_settings_panel
{
    display: none;
    padding: 10px;
    border-top: 1px solid #d6d6d6;
}
.remote_destination_update_field
{
    width: 25em;
}
.backup_destination_new_cont_panel, #clonesite_test_ftp_loading
{
    display: none;
}
#clonesite_test_ftp_loading
{
    background-repeat: no-repeat;
}
.backup_destination_new_cont
{
    border-top: 1px solid #d6d6d6;
}

.offline_check_saved, #managegroups-saved, #clone-saved
{
    padding-left: 3px;
    font-weight: normal;
    font-style:italic;
    color: #21759b;
    display: none;
}
.unignoreInfo
{
    display: inline-block;
    width: 400px;
}
.unignoreAction
{
    display: inline-block ;
    width: auto ;
}

.mainwp-pass
{
	padding: 1px 5px;
    background: rgba(127, 177, 0, 0.3);
    border: 1px solid #7fb100;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    clear: both;
}
/* ... */

